--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
+    "lowdb": "^1.0.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
